--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "ixhbinphoenix's github page",
   "main": "",
   "scripts": {
-    "build": "npx tsc -b tsconfig.json && npx sass src/:dist/ && cp src/*.html dist/"
+    "build": "npx tsc -b tsconfig.json && npx sass src/:dist/ && cp src/*.html dist/",
+    "deploy": "npm run build && git subtree push --prefix dist origin gh-pages"
   },
   "repository": {
     "type": "git",
